# Knapsack-problem

./: .gitignore  CMakeLists.txt  DataStructures.h  algorithm.cpp  algorithm.h  bag.cpp  bag.h  constructive_solutions.cpp  constructive_solutions.h  data_model.cpp  data_model.h  dependency.cpp  dependency.h  file_processor.cpp  file_processor.h  fileprocessor.cpp  fileprocessor.h  gerador_de_instâncias.py  grasp.cpp  grasp.h  grasp_helper.cpp  grasp_helper.h  grasp_vns.cpp  grasp_vns.h  instance_generator.py  instancia2.knapsack.txt  instancia_medium.knapsack.txt  instancia_small.knapsack.txt  instancia_tiny.knapsack.txt  knapsackwindow.cpp  knapsackwindow.h  knapsackwindow.ui  localsearch.cpp  localsearch.h  main.cpp  main.h  metaheuristichelper.cpp  metaheuristichelper.h  package.cpp  package.h  (+17 more)
input/: 10000_10000_10000_51200_20250918_235419.knapsack.txt  1000_5000_9000_2048_20250919_071126.knapsack.txt  instance_generator.py  report_instancia_original.knapsack_2025-10-12_11_57_27.txt  report_instancia_original.knapsack_2025-10-12_13_00_33.txt  report_instÃ¢ncia_original.knapsack_2025-10-10_09_31_03.txt  report_instÃ¢ncia_original.knapsack_2025-10-10_09_44_21.txt  report_instÃ¢ncia_original.knapsack_2025-10-10_10_02_29.txt  report_instÃ¢ncia_original.knapsack_2025-10-10_10_02_47.txt  report_instÃ¢ncia_original.knapsack_2025-10-10_10_02_51.txt  report_instÃ¢ncia_original.knapsack_2025-10-10_10_02_59.txt  report_instÃ¢ncia_original.knapsack_2025-10-10_10_03_00.txt  report_instÃ¢ncia_original.knapsack_2025-10-10_10_03_01.txt  report_instÃ¢ncia_original.knapsack_2025-10-10_10_03_02.txt  report_instÃ¢ncia_original.knapsack_2025-10-10_10_03_03.txt  report_instÃ¢ncia_original.knapsack_2025-10-12_08_57_28.txt  report_instÃ¢ncia_original.knapsack_2025-10-12_10_01_03.txt  report_instÃ¢ncia_original.knapsack_2025-10-12_10_56_19.txt  report_instÃ¢ncia_original.knapsack_2025-10-12_10_57_59.txt  report_instÃ¢ncia_original.knapsack_2025-10-12_10_59_33.txt  report_instÃ¢ncia_original.knapsack_2025-10-12_11_04_20.txt  report_instÃ¢ncia_original.knapsack_2025-10-12_11_05_40.txt  results_knapsackResults copy.csv  results_knapsackResults.csv  results_knapsackResults1.csv  results_knapsackResults2.csv  results_knapsackResults3.csv  results_knapsackResults4.csv  results_knapsackResults5.csv  results_knapsackResults6.csv  results_knapsackResults7.csv  summary_results-2025-10-24_12-44-52.csv  summary_results-2025-10-24_16-24-34.csv  summary_results-2025-10-24_16-44-28.csv  summary_results-2025-10-25_19-27-06.csv  summary_results-2025-10-26_12-37-53.csv  summary_results-2025-10-26_12-40-43.csv
input/output-0.1/: results_knapsackResults.csv
input/output-0.2/: report_sukp28_485_500_0.15_0.85.knapsack_2025-10-17_12_33_12.txt
input/output-2/: report_sukp02_100_85_0.10_0.75.knapsack_2025-10-17_12_26_34.txt  report_sukp07_285_300_0.10_0.75.knapsack_2025-10-17_12_27_23.txt
input/output-5/: results_knapsackResults.csv
output/: results_knapsackResults.csv
